<resources>
    <string name="app_name">Lugares</string>
    <string name="action_settings">Preferencias</string>
    <string name="btnMisLugares">Mis lugares</string>
    <string name="btnPreferencias">Preferencias</string>
    <string name="btnAcerca">Acerca De</string>
    <string name="btnSalir">Salir</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtTipo">Tipo:</string>
    <string name="txtDireccion">Direccion:</string>
    <string name="txtTelefono">Telefono:</string>
    <string name="txtUrl">Url:</string>
    <string name="txtComentario">Comentario:</string>

    <!-- Activity vista lugares -->
    <string name="txtTituloLugar">Nombres del lugar</string>
    <string name="txtTipoLugar">tipo del lugar</string>
    <string name="txtDireccionLugar">direccion</string>
    <string name="txtTelefonoLugar">telefono</string>
    <string name="txtUrlLugar">url</string>
    <string name="txtComentarioLugar">comentario</string>
    <string name="txtFechaLugar">fecha</string>
    <string name="txtHoraLugar">hora</string>

    <!-- Layout elemento lista -->
    <string name="nombre_elemento">Nombre del lugar</string>
    <string name="direccion_elemento">Direccion del lugar</string>
    <string name="foto_elemento">lugar</string>


    <string-array name="colores_spinner">
        <item>Negro</item>
        <item>Blanco</item>
        <item>Azul</item>
        <item>Marron</item>
        <item>Verde</item>
        <item>Gris</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Morado</item>
        <item>Rosa</item>
        <item>Rojo</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>