<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:contentDescription="@string/foto_elemento"
        app:srcCompat="@drawable/bar" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/foto"
        android:layout_toEndOf="@+id/foto"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombre_elemento" />

    <TextView
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/foto"
        android:layout_toEndOf="@+id/foto"
        android:layout_below="@id/nombre"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/direccion_elemento" />

    <RatingBar
        android:id="@+id/valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/direccion"
        android:layout_toRightOf="@id/foto"
        style="?android:attr/ratingBarStyleSmall"
        android:isIndicator="true"
        android:rating="3"
        android:layout_toEndOf="@+id/foto" />

</RelativeLayout>